notify-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notify
spec:
  selector:
    matchLabels:
      app: notify
  template:
    metadata:
      labels:
        app: notify
    spec:
      volumes:
        - name: notify-cm
          configMap:
            name: notify-cm
      containers:
        - name: notify
          image: xxxx/notify:v1.1.1
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "100m"
          # command: [ "bash","-c","sleep 3600" ]
          ports:
            - containerPort: 11122
          volumeMounts:
            - name: notify-cm
              mountPath: /etc/app
              readOnly: true

        - name: prometheus-alertmanager-configmap-reload
          image: "jimmidyson/configmap-reload:v0.4.0"
          imagePullPolicy: "IfNotPresent"
          args:
            - --volume-dir=/etc/app
            - --webhook-url=http://127.0.0.1:11122/reload
          resources:
            limits:
              memory: "64Mi"
              cpu: "50m"
            requests:
              memory: "64Mi"
              cpu: "50m"
          volumeMounts:
            - name: notify-cm
              mountPath: /etc/app
              readOnly: true

      nodeSelector:
        nodegroup-type: infra

---
apiVersion: v1
kind: Service
metadata:
  name: notify
spec:
  selector:
    app: notify
  ports:
    - port: 80
      targetPort: 11122
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notify01
  labels:
    name: notify01
spec:
  rules:
    - host: notify01.xx.cn
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: notify
                port:
                  number: 80
  tls:
    - hosts:
        - notify01.xx.cn
      secretName: xx-cn-tls
---
